<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@id/test_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_db" />

    <Button
        android:id="@id/test_cache"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_cache" />

    <Button
        android:id="@id/test_image_cache"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_image_cache" />

    <Button
        android:id="@id/test_mvc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_mvc" />

    <Button
        android:id="@id/test_http"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_http" />

    <Button
        android:id="@id/test_download"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_download" />

    <Button
        android:id="@id/test_other"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_other" />

    <Button
        android:id="@id/exit_app"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_app" />

</LinearLayout>