<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/test_simple_down"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_simple_down" />

    <Button
        android:id="@+id/test_simple_down_two"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_simple_down_two" />

    <Button
        android:id="@+id/test_multi_thread_down"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_multi_thread_down" />

</LinearLayout>