<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@id/test_configure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_configure" />

    <Button
        android:id="@id/test_resoperate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_resoperate" />

    <Button
        android:id="@id/test_comparator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_comparator" />

    <TextView
        android:id="@+id/show_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>